added accessabilty to jacket html/changed tags

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -649,6 +649,7 @@ input[type="checkbox"] {
 
 .related__title {
   display: inline-block;
+  font-size: 1rem;
   margin-bottom: 50px;
   font-weight: 600;
 }
