--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -133,35 +133,49 @@ header:hover .color-variant path {
 }
 
 /* swiper */
-.swiper-button-prev.swiper-button-disabled,
-.swiper-button-next.swiper-button-disabled {
-  opacity: 0;
-}
 
-.swiper-button-next,
-.swiper-button-prev {
-  opacity: 0;
-  transition: opacity 0.3s;
-}
-
-.swiper:hover .swiper-button-next,
-.swiper:hover .swiper-button-prev {
-  opacity: 1;
-}
-
-.slide-container {
+.carousel-container {
+  margin: 0 auto;
   max-width: 1920px;
   width: 100%;
+  position: relative;
+  overflow: hidden;
 }
 
-.slide-wrapper {
+.carousel {
   --gap: 30px;
   gap: var(--gap);
-  overflow: hidden;
+}
+
+.sliding-transition {
+  transition: transform 0.5s ease-in-out;
 }
 
 .slide {
   flex: 0 0 calc((100% - 4 * var(--gap)) / 5);
+}
+
+.prev-button,
+.next-button {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: opacity 0.2s ease-in-out;
+  opacity: 0;
+  cursor: pointer;
+}
+
+.carousel-container:hover .prev-button,
+.carousel-container:hover .next-button {
+  opacity: 1;
+}
+
+.prev-button {
+  left: 10px;
+}
+
+.next-button {
+  right: 10px;
 }
 
 .slide-text {
