--- a/src/css/payment.css
+++ b/src/css/payment.css
@@ -35,6 +35,30 @@
     margin-bottom: 50px;
 }
 
+#basketSummary {
+    grid-template-columns: repeat(auto-fit, minmax(110px, 150px));
+    gap: 20px;
+    margin-bottom: 60px;
+}
+
+.summary-title {
+    margin-bottom: 40px;
+}
+
+.summary-item {
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+
+.summary-details {
+    font-size: 16px;
+}
+
+.summary-details h3 {
+    margin-bottom: 10px;
+}
+
 .card-details {
     margin-bottom: 16px;
     flex-direction: column;
@@ -78,6 +102,7 @@
 
 .pay {
     width: 100%;
+    text-align: center;
     padding: 12px 0;
     border: 1px solid #0A3641;
     border-radius: 20px;
@@ -91,5 +116,5 @@
 
 .tippy-box[data-placement^='bottom'] > .tippy-arrow::before {
     border-bottom-color: var(--color-primary);
-  }
+}
 
